--- a/Dockerfile2
+++ b/Dockerfile2
@@ -3,6 +3,7 @@
 # See https://github.com/phusion/baseimage-docker/blob/master/Changelog.md for
 # a list of version numbers.
 
+#FROM ubuntu:16.04
 FROM phusion/baseimage:0.10.1
 MAINTAINER Marco Meola (meolam2@gmail.com)
 
@@ -86,6 +87,7 @@ EXPOSE 80
 ##########
 ENTRYPOINT service apache2 start && /bin/bash
 
+
 ##########
 ### Install Tini
 ##########
@@ -100,11 +102,12 @@ RUN wget --quiet https://github.com/krallin/tini/releases/download/v0.10.0/tini 
 RUN curl http://microbiology.se/sw/Metaxa2_2.2-beta10.tar.gz --output Metaxa2_2.2-beta10.tar.gz
 RUN tar xvfz Metaxa2_2.2-beta10.tar.gz
 RUN cd Metaxa2_2.2 && ./install_metaxa2
-RUN rm Metaxa2_2.2-beta10.tar.gz
+
 
 ##########
 ### Install Samtools
 ##########
+
 RUN wget https://github.com/samtools/samtools/releases/download/1.5/samtools-1.5.tar.bz2
 RUN tar -xjvf samtools-1.5.tar.bz2
 WORKDIR /build/samtools-1.5
