--- a/Dockerfile2
+++ b/Dockerfile2
@@ -3,7 +3,6 @@
 # See https://github.com/phusion/baseimage-docker/blob/master/Changelog.md for
 # a list of version numbers.
 
-#FROM ubuntu:16.04
 FROM phusion/baseimage:0.10.1
 MAINTAINER Marco Meola (meolam2@gmail.com)
 
@@ -50,7 +49,8 @@ RUN apt-get install -y wget \
   unzip \
   fonts-dejavu \
   tzdata \
-  gfortran
+  gfortran \
+  software-properties-common
 
 RUN apt-get update --fix-missing
 RUN apt-get clean
@@ -75,7 +75,9 @@ ENV PATH=$CONDA_DIR/bin:$PATH \
 ##########
 ### Install apache2
 ##########
-# RUN apt-get install -y apache2
+RUN apt-get update && \
+  apt-get install -y apache2 apache2-utils && \
+  a2enmod proxy && a2enmod proxy_http
 
 ##########
 ### expose port 80
@@ -86,7 +88,6 @@ EXPOSE 80
 ### Launch the webserver
 ##########
 ENTRYPOINT service apache2 start && /bin/bash
-
 
 ##########
 ### Install Tini
@@ -102,12 +103,11 @@ RUN wget --quiet https://github.com/krallin/tini/releases/download/v0.10.0/tini 
 RUN curl http://microbiology.se/sw/Metaxa2_2.2-beta10.tar.gz --output Metaxa2_2.2-beta10.tar.gz
 RUN tar xvfz Metaxa2_2.2-beta10.tar.gz
 RUN cd Metaxa2_2.2 && ./install_metaxa2
-
+RUN rm Metaxa2_2.2-beta10.tar.gz
 
 ##########
 ### Install Samtools
 ##########
-
 RUN wget https://github.com/samtools/samtools/releases/download/1.5/samtools-1.5.tar.bz2
 RUN tar -xjvf samtools-1.5.tar.bz2
 WORKDIR /build/samtools-1.5
